--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,6 +3,7 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v[0-9]+.[0-9]+.[0-9]+" ]
   pull_request:
     branches: [ "main" ]
 
@@ -17,33 +18,34 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-      with:
-        gradle-version: '8.5'
-    
-    - name: Build with Gradle 8.5
-      run: gradle build
+      - uses: actions/checkout@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
 
-    - name: Upload library JAR
-      uses: actions/upload-artifact@v4.3.1
-      with:
-        name: lib-${{ matrix.os }}.jar
-        path: desktop/build/libs/desktop-1.0.jar
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+        with:
+          gradle-version: '8.5'
 
-    - name: Upload Checkstyle report
-      uses: actions/upload-artifact@v4.3.1
-      if: startsWith(matrix.os, 'ubuntu')
-      with:
-        name: checkstyle-report
-        path: core/build/reports/checkstyle
+      - name: Build with Gradle 8.5
+        run: gradle build
+
+      - name: Upload library JAR
+        uses: actions/upload-artifact@v4.3.1
+        if: startsWith(matrix.os, 'ubuntu')
+        with:
+          name: desktop-1.0.jar
+          path: desktop/build/libs/desktop-1.0.jar
+
+      - name: Upload Checkstyle report
+        uses: actions/upload-artifact@v4.3.1
+        if: startsWith(matrix.os, 'ubuntu')
+        with:
+          name: checkstyle-report
+          path: core/build/reports/checkstyle
 
   dependency-submission:
 
@@ -52,13 +54,32 @@ jobs:
       contents: write
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
+      # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+
+  release:
+    runs-on: ubuntu-22.04
+    needs: [ "build" ]
+    if: startsWith(github.ref, 'refs/tags/')
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: Download Ubuntu Build Artifact
+        uses: actions/download-artifact@v4.1.4
+        with:
+          name: desktop-1.0.jar
+      - name: Release
+        uses: softprops/action-gh-release@9d7c94cfd0a1f3ed45544c887983e9fa900f0564
+        with:
+          files: desktop-1.0.jar
