Setup JUnit testing and add some basic tests for the Activity class.

--- a/build.gradle
+++ b/build.gradle
@@ -75,3 +75,43 @@ project(":core") {
         config = resources.text.fromArchiveEntry(configurations.checkstyleRules, 'google_checks.xml')
     }
 }
+
+project(":tests") {
+    apply plugin: "java"
+    apply plugin: "jacoco"
+
+    sourceSets.test.java.srcDirs = ["src/"]
+
+    dependencies {
+        // Relies on main project code
+        implementation project(":core")
+
+        // Unit test libraries
+        implementation "junit:junit:4.+"
+        implementation "org.mockito:mockito-all:1.9.+"
+
+        // Headless backend is able to fake interactions with graphics
+        implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+
+        testImplementation 'junit:junit:4.+'
+        testImplementation "org.mockito:mockito-all:1.9.+"
+
+        testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+        testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+        testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    }
+
+    jacocoTestReport {
+        dependsOn test
+        sourceSets project(':core').sourceSets.main
+        afterEvaluate {
+            classDirectories.setFrom(files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: ['**/*Tests.*', '**/GdxTestRunner.*'])
+            }))
+        }
+    }
+    test {
+        finalizedBy jacocoTestReport
+    }
+}
